add bootstrap grid

--- a/courses.html
+++ b/courses.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/output.css" type="text/css">
     <script src="js/scripts.js"></script>
     <title></title>
@@ -26,72 +27,76 @@
             <li><span class="bold">Intro to Programming</span></li>
           </ul>
         </div>
-        <div class="weekly-schedule">
-          <div class="row2">
-            <div class="week-title">
-              <h5>Pre-Work</h5>
+        <div class="menu-nav">
+          <div class="row">
+            <div class="col-md-3">
+              <div class="row">
+                <div class="weekday-toggle">
+                  <h3>Weekend</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="weekday-toggle">
+                  <h3>Monday</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="weekday-toggle">
+                  <h3>Tuesday</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="weekday-toggle">
+                  <h3>Wednesday</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="weekday-toggle">
+                  <h3>Thursday</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="weekday-toggle">
+                  <h3>Friday</h3>
+                </div>
+              </div>
             </div>
-            <div class="week-work" id="pre-work-list">
-              <a href="#">Getting Started at Epicodus</a>
-              <a href="#">Getting Started With Intro to Programming</a>
-            </div>
-            <div class="test">
+            <div class="col-md-9">
+             <p>This week we will be learning the building blocks of making basic web pages: HTML and CSS. We will also focus on using the command line and Git to create a daily workflow for our coding projects.</p>
 
-            </div>
-          </div>
-          <div class="row2">
-            <div class="week-title">
-              <h5>Week 1</h5>
-            </div>
-            <div class="week-work">
-              <a href="#">Git, HTML and CSS</a>
-            </div>
-            <div class="test">
+            <p><span class="bold">Daily Goals</span></p>
+            <p>Everyone learns at a different pace. Understanding is the most important goal every day. If you feel like you will not be able to complete all of the lessons in a given day, talk to a teacher about ways to ensure that you are covering the day's objectives. And always focus on understanding the concepts at hand, not finishing the work as quickly as possible.</p>
 
-            </div>
-          </div>
-          <div class="row2">
-            <div class="week-title">
-              <h5>Week 2</h5>
-            </div>
-            <div class="week-work">
-              <a href="#">JavaScript and jQuery</a>
-            </div>
-            <div class="test">
+            <p>Lessons that have "Homework" in the title indicate that the work is expected to be completed at home and not in class.</p>
 
-            </div>
-          </div>
-          <div class="row2">
-            <div class="week-title">
-              <h5>Week 3</h5>
-            </div>
-            <div class="week-work">
-              <a href="#">Arrays & Looping</a>
-            </div>
-            <div class="test">
+            <p><span class="bold">Plan</span></p>
+            <p>We will begin this week by practicing the command line, Git, Github, and exploring basic HTML. We'll create READMEs to include extra information with our projects on Github. We'll also learn a formatting language called Markdown to format READMEs. Then, we'll explore basic CSS to add styling to our web pages, and actually publish our sites online! Later in the week we will dive deeper into CSS by using divs and spans, floats, cascading, classes, ids, and the box model. Finally, we'll explore a tool called Bootstrap that offers even more powerful styling capability. You're in for a great time!</p>
 
-            </div>
-          </div>
-          <div class="row2">
-            <div class="week-title">
-              <h5>Week 4</h5>
-            </div>
-            <div class="week-work">
-              <a href="#">Object-Oriented JavaScript</a>
-            </div>
-            <div class="test">
+            <p>At the end of this section, you will be able to:</p>
 
-            </div>
-          </div>
-          <div class="row2">
-            <div class="week-title">
-              <h5>Week 5</h5>
-            </div>
-            <div class="week-work">
-              <a href="#">Team Week</a>
-            </div>
-            <div class="test">
+            <p>Navigate the command line to access and create directories and files</p>
+            <p>Use Git and GitHub to track the creation of static webpages</p>
+            <p>Create a static webpage using HTML</p>
+            <p>Style a static webpage using custom CSS rules in a linked stylesheet</p>
+            <p>Create a project README.md in Markdown</p>
+            <p>Apply Bootstrap rules and classes</p>
+            <p>Adapt a webpage for responsive design</p>
+            <p>Independent Project Objectives</p>
+            <p>At the end of this section you will complete an independent project. Your instructor will review this project for the following objectives:</p>
 
+            <p>Use the most common HTML tags:</p>
+            <p>p, h, ul, ol, li, em, strong, a, img, div, span</p>
+            <p>Use Bootstrap classes to style your page</p>
+            <p>Create a custom-made stylesheet that uses cascading, the box model, and floats</p>
+            <p>Code is clean, well-refactored, and easy-to-read. This includes correct indendation, spacing, and including only necessary comments and debugging tools.</p>
+            <p>Make Git commits regularly with clear messages that finish the phrase "It will…"</p>
+            <p>Add a README to the GitHub repository that includes:</p>
+            <p>author name</p>
+            <p>project or program name</p>
+            <p>description of program</p>
+            <p>program setup instructions</p>
+            <p>link to live version of site on GitHub Pages</p>
+            <p>copyright and license information</p>
             </div>
           </div>
         </div>
