--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/output.css" type="text/css">
     <script src="js/scripts.js"></script>
     <title></title>
@@ -19,7 +20,7 @@
         </div>
       </div>
       <div class="main-body">
-        <div class="menu">
+        <div class="menu row">
           <div class="page-title">
             <h1>Courses</h1>
           </div>
@@ -33,61 +34,64 @@
             </ul>
           </div>
         </div>
-        <div class="row">
-          <div class="course-title">
-            <h2>C# / React</h2>
-            <p>Back-end</p>
+        <div class="course-content">
+          <div class="course row">
+            <div class="course-title col-md-8">
+              <h2>C# / React</h2>
+              <p>Back-end</p>
+            </div>
+            <div class="course-list col-md-4">
+              <ul>
+                <li><a href="#">Intro to Programming</a></li>
+                <li><a href="#">C#</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">React</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="course-list">
-            <ul>
-              <li><a href="#">Intro to Programming</a></li>
-              <li><a href="#">C#</a></li>
-              <li><a href="#">JavaScript</a></li>
-              <li><a href="#">React</a></li>
-            </ul>
+          <div class="course row">
+            <div class="course-title col-md-8">
+              <h2>Ruby / Rails</h2>
+              <p>Back-end</p>
+            </div>
+            <div class="course-list col-md-4">
+              <ul>
+                <li><a href="#">Intro to Programming</a></li>
+                <li><a href="#">Ruby</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">Rails</a></li>
+              </ul>
+            </div>
           </div>
+          <div class="course row">
+            <div class="course-title col-md-8">
+              <h2>Ruby / React</h2>
+              <p>Back-end</p>
+            </div>
+            <div class="course-list col-md-4">
+              <ul>
+                <li><a href="#">Intro to Programming</a></li>
+                <li><a href="#">Ruby</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">React</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="course row">
+            <div class="course-title col-md-8">
+              <h2>User Interfaces</h2>
+              <p>Front-end</p>
+            </div>
+            <div class="course-list col-md-4">
+              <ul>
+                <li><a href="#">Intro to Programming</a></li>
+                <li><a href="#">User Interfaces</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">React</a></li>
+              </ul>
+            </div>
         </div>
-        <div class="row">
-          <div class="course-title">
-            <h2>Ruby / Rails</h2>
-            <p>Back-end</p>
-          </div>
-          <div class="course-list">
-            <ul>
-              <li><a href="#">Intro to Programming</a></li>
-              <li><a href="#">Ruby</a></li>
-              <li><a href="#">JavaScript</a></li>
-              <li><a href="#">Rails</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="row">
-          <div class="course-title">
-            <h2>Ruby / React</h2>
-            <p>Back-end</p>
-          </div>
-          <div class="course-list">
-            <ul>
-              <li><a href="#">Intro to Programming</a></li>
-              <li><a href="#">Ruby</a></li>
-              <li><a href="#">JavaScript</a></li>
-              <li><a href="#">React</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="row">
-          <div class="course-title">
-            <h2>User Interfaces</h2>
-            <p>Front-end</p>
-          </div>
-          <div class="course-list">
-            <ul>
-              <li><a href="#">Intro to Programming</a></li>
-              <li><a href="#">User Interfaces</a></li>
-              <li><a href="#">JavaScript</a></li>
-              <li><a href="#">React</a></li>
-            </ul>
-          </div>
+
         </div>
       </div>
     </div>
