add click and toggle functionality to scripts

--- a/courses.html
+++ b/courses.html
@@ -5,6 +5,10 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/output.css" type="text/css">
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <title></title>
   </head>
@@ -27,37 +31,50 @@
             <li><span class="bold">Intro to Programming</span></li>
           </ul>
         </div>
-        <div class="menu-nav">
+        <div class="container">
           <div class="row">
             <div class="col-md-3">
               <div class="row">
-                <div class="weekday-toggle">
-                  <h3>Weekend</h3>
+                <div class="weekday-toggle col-md-12">
+                  <h3>Weekend <span class="caret"></span></h3>
                 </div>
               </div>
               <div class="row">
-                <div class="weekday-toggle">
-                  <h3>Monday</h3>
+                <div class="col-md-12">
+                  <div class="weekday-toggle" id="monday">
+                    <h3>Monday <span class="caret"></span></h3>
+                  </div>
+                  <div class="monday-work">
+                    <ul>
+                      <li><a href="">Journaling at Epicodus</a></li>
+                      <li><a href="">Week One Journal Prompt</a></li>
+                      <li><a href="">Practice: Git Project Setup</a></li>
+                      <li><a href="">Practice: Tracking Changes with Git</a></li>
+                      <li><a href="">Practice: Github Remote Repositories</a></li>
+                      <li><a href="">Practice: Command Line, Git, Github</a></li>
+                    </ul>
+                  </div>
+                </div>
+
+              </div>
+              <div class="row">
+                <div class="weekday-toggle col-md-12">
+                  <h3>Tuesday <span class="caret"></span></h3>
                 </div>
               </div>
               <div class="row">
-                <div class="weekday-toggle">
-                  <h3>Tuesday</h3>
+                <div class="weekday-toggle col-md-12">
+                  <h3>Wednesday <span class="caret"></span></h3>
                 </div>
               </div>
               <div class="row">
-                <div class="weekday-toggle">
-                  <h3>Wednesday</h3>
+                <div class="weekday-toggle col-md-12">
+                  <h3>Thursday <span class="caret"></span></h3>
                 </div>
               </div>
               <div class="row">
-                <div class="weekday-toggle">
-                  <h3>Thursday</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="weekday-toggle">
-                  <h3>Friday</h3>
+                <div class="weekday-toggle col-md-12">
+                  <h3>Friday <span class="caret"></span></h3>
                 </div>
               </div>
             </div>
