--- a/courses.html
+++ b/courses.html
@@ -91,29 +91,39 @@
 
             <p>At the end of this section, you will be able to:</p>
 
-            <p>Navigate the command line to access and create directories and files</p>
-            <p>Use Git and GitHub to track the creation of static webpages</p>
-            <p>Create a static webpage using HTML</p>
-            <p>Style a static webpage using custom CSS rules in a linked stylesheet</p>
-            <p>Create a project README.md in Markdown</p>
-            <p>Apply Bootstrap rules and classes</p>
-            <p>Adapt a webpage for responsive design</p>
-            <p>Independent Project Objectives</p>
-            <p>At the end of this section you will complete an independent project. Your instructor will review this project for the following objectives:</p>
+            <ul>
+              <li>Navigate the command line to access and create directories and files</li>
+              <li>Use Git and GitHub to track the creation of static webpages</li>
+              <li>Create a static webpage using HTML</li>
+              <li>Style a static webpage using custom CSS rules in a linked stylesheet</li>
+              <li>Create a project README.md in Markdown</li>
+              <li>Apply Bootstrap rules and classes</li>
+              <li>Adapt a webpage for responsive design</li>
+              <li>Independent Project Objectives</li>
+            </ul>
 
-            <p>Use the most common HTML tags:</p>
-            <p>p, h, ul, ol, li, em, strong, a, img, div, span</p>
-            <p>Use Bootstrap classes to style your page</p>
-            <p>Create a custom-made stylesheet that uses cascading, the box model, and floats</p>
-            <p>Code is clean, well-refactored, and easy-to-read. This includes correct indendation, spacing, and including only necessary comments and debugging tools.</p>
-            <p>Make Git commits regularly with clear messages that finish the phrase "It will…"</p>
-            <p>Add a README to the GitHub repository that includes:</p>
-            <p>author name</p>
-            <p>project or program name</p>
-            <p>description of program</p>
-            <p>program setup instructions</p>
-            <p>link to live version of site on GitHub Pages</p>
-            <p>copyright and license information</p>
+            <p>At the end of this section you will complete an independent project. Your instructor will review this project for the following objectives:</p>
+            <ul>
+              <li>Use the most common HTML tags:</li>
+              <ul>
+                <li>p, h, ul, ol, li, em, strong, a, img, div, span</li>
+                <li>Use Bootstrap classes to style your page</li>
+                <li>Create a custom-made stylesheet that uses cascading, the box model, and floats</li>
+                <li>Code is clean, well-refactored, and easy-to-read. This includes correct indendation, spacing, and including only necessary comments and debugging tools.</li>
+                <li>Make Git commits regularly with clear messages that finish the phrase "It will…"</li>
+              </ul>
+            </ul>
+            <ul>
+              <li>Add a README to the GitHub repository that includes:</li>
+              <ul>
+                <li>author name</li>
+                <li>project or program name</li>
+                <li>description of program</li>
+                <li>program setup instructions</li>
+                <li>link to live version of site on GitHub Pages</li>
+                <li>copyright and license information</li>
+              </ul>
+            </ul>
             </div>
           </div>
         </div>
