--- a/courses.html
+++ b/courses.html
@@ -16,7 +16,7 @@
     <div class="flex-container">
       <div class="nav-bar">
         <div class="logo">
-          <img src="https://static1.squarespace.com/static/5524448ee4b0d6f6b83ab9e2/t/57cf3de246c3c4d2933aa57c/1529949737992/?format=1500w" alt="">
+          <a href="index.html"><img src="https://static1.squarespace.com/static/5524448ee4b0d6f6b83ab9e2/t/57cf3de246c3c4d2933aa57c/1529949737992/?format=1500w" alt=""></a>
         </div>
         <div class="search">
           <img id="magnifying" src="img/search-icon.png" alt="">
