--- a/week-details.html
+++ b/week-details.html
@@ -5,14 +5,13 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/output.css" type="text/css">
-    <script src="js/scripts.js"></script>
     <title></title>
   </head>
   <body>
     <div class="flex-container">
       <div class="nav-bar">
         <div class="logo">
-          <img src="https://static1.squarespace.com/static/5524448ee4b0d6f6b83ab9e2/t/57cf3de246c3c4d2933aa57c/1529949737992/?format=1500w" alt="">
+          <a href="index.html"><img src="https://static1.squarespace.com/static/5524448ee4b0d6f6b83ab9e2/t/57cf3de246c3c4d2933aa57c/1529949737992/?format=1500w" alt=""></a>
         </div>
         <div class="search">
           <img id="magnifying" src="img/search-icon.png" alt="">
