link pages to each other

--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/output.css" type="text/css">
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
@@ -28,7 +28,9 @@
           <ul>
             <li><a href="index.html">Courses</a></li>
             <li>></li>
-            <li><span class="bold">Intro to Programming</span></li>
+            <li><a href="week-details.html">Intro to Programming</a></li>
+            <li>></li>
+            <li><span class="bold">Git, HTML and CSS</span></li>
           </ul>
         </div>
         <div class="container">
@@ -36,13 +38,13 @@
             <div class="col-md-3">
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Weekend <span class="caret"></span></h3>
+                  <h3>Weekend <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
                   <div class="weekday-toggle" id="monday">
-                    <h3>Monday <span class="caret"></span></h3>
+                    <h3>Monday <img src="img/caret.png" class="caret" alt=""></h3>
                   </div>
                   <div class="monday-work">
                     <ul>
@@ -50,7 +52,7 @@
                       <li><a href="">Week One Journal Prompt</a></li>
                       <li><a href="">Practice: Git Project Setup</a></li>
                       <li><a href="">Practice: Tracking Changes with Git</a></li>
-                      <li><a href="">Practice: Github Remote Repositories</a></li>
+                      <li><a href="lesson.html">Practice: Github Remote Repositories</a></li>
                       <li><a href="">Practice: Command Line, Git, Github</a></li>
                     </ul>
                   </div>
@@ -59,22 +61,22 @@
               </div>
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Tuesday <span class="caret"></span></h3>
+                  <h3>Tuesday <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Wednesday <span class="caret"></span></h3>
+                  <h3>Wednesday <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Thursday <span class="caret"></span></h3>
+                  <h3>Thursday <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Friday <span class="caret"></span></h3>
+                  <h3>Friday <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
             </div>
