--- a/lesson.html
+++ b/lesson.html
@@ -32,7 +32,11 @@
           <ul>
             <li><a href="index.html">Courses</a></li>
             <li>></li>
-            <li><span class="bold">Intro to Programming</span></li>
+            <li><a href="week-details.html">Intro to Programming</a></li>
+            <li>></li>
+            <li><a href="courses.html">Github, HTML and CSS</a></li>
+            <li>></li>
+            <li><span class="bold">Practice: Github Remote Repositories</span></li>
           </ul>
         </div>
         <div class="container">
@@ -40,13 +44,13 @@
             <div class="col-md-3">
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Weekend <span class="caret"></span></h3>
+                  <h3>Weekend <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
                   <div class="weekday-toggle" id="monday">
-                    <h3>Monday <span class="caret"></span></h3>
+                    <h3>Monday <img src="img/caret.png" class="caret" alt=""></h3>
                   </div>
                   <div class="monday-work">
                     <ul>
@@ -54,7 +58,7 @@
                       <li><a href="">Week One Journal Prompt</a></li>
                       <li><a href="">Practice: Git Project Setup</a></li>
                       <li><a href="">Practice: Tracking Changes with Git</a></li>
-                      <li><a href="">Practice: Github Remote Repositories</a></li>
+                      <li><a href="" class="teal">Practice: Github Remote Repositories</a></li>
                       <li><a href="">Practice: Command Line, Git, Github</a></li>
                     </ul>
                   </div>
@@ -63,42 +67,61 @@
               </div>
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Tuesday <span class="caret"></span></h3>
+                  <h3>Tuesday <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Wednesday <span class="caret"></span></h3>
+                  <h3>Wednesday <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Thursday <span class="caret"></span></h3>
+                  <h3>Thursday <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
               <div class="row">
                 <div class="weekday-toggle col-md-12">
-                  <h3>Friday <span class="caret"></span></h3>
+                  <h3>Friday <img src="img/caret.png" class="caret" alt=""></h3>
                 </div>
               </div>
             </div>
-            <div class="col-md-9" id="tab-content">
+            <div class="col-md-9" id="tab-headers">
+              <h1>Practice: Github Remote Repositories</h1>
 
               <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
-                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Video</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Text</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+                  <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Cheat Sheet</a>
                 </li>
               </ul>
               <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">home</div>
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                  <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/42530011" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                </div>
+
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Hey hey hey </div>
-                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Yooo</div>
+                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                  <h6>Terminology</h6>
+                  <p><span class="bold">Local:</span> In Git terms, local means located on the device that you are using.</p>
+
+                  <p><span class="bold">Remote:</span> In Git terms, this means located outside of the device you are using; for example, GitHub.</p>
+
+                  <p><span class="bold">README:</span> A file that provides more details information about a GitHub repository's code.</p>
+
+                  <p><span class="bold">Push:</span> Copy the code from a local Git repository to a remote repository.</p>
+
+                  <p><span class="bold">Master:</span> The master copy of a Git repository on a local machine, also known as the master branch.</p>
+
+                  <p><span class="bold">Clone:</span> To make a copy of a repository from Github on a local machine.</p>
+
+                  <p><span class="bold">Origin:</span> The default nickname given to the GitHub remote repository when it is cloned.</p>
+                </div>
               </div>
 
           </div>
