--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/output.css" type="text/css">
     <title></title>
   </head>
@@ -83,7 +83,7 @@
             </div>
             <div class="course-list col-md-4">
               <ul>
-                <li><a href="#">Intro to Programming</a></li>
+                <li><a href="week-details.html">Intro to Programming</a></li>
                 <li><a href="#">User Interfaces</a></li>
                 <li><a href="#">JavaScript</a></li>
                 <li><a href="#">React</a></li>
