--- a/week-details.html
+++ b/week-details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/output.css" type="text/css">
     <title></title>
   </head>
@@ -23,9 +23,7 @@
           <ul>
             <li><a href="index.html">Courses</a></li>
             <li>></li>
-            <li>Intro to Programming</li>
-            <li>></li>
-            <li><span class="bold">Git, HTML and CSS</span></li>
+            <li><span class="bold">Intro to Programming</span></li>
           </ul>
         </div>
         <div class="weekly-schedule">
@@ -43,7 +41,7 @@
               <h5>Week 1</h5>
             </div>
             <div class="week-work col-md-10">
-              <a href="#">Git, HTML and CSS</a>
+              <a href="courses.html">Git, HTML and CSS</a>
             </div>
             <div class="test">
 
