--- a/week-details.html
+++ b/week-details.html
@@ -31,7 +31,9 @@
             <div class="week-title col-md-2">
               <h5>Pre-Work</h5>
             </div>
-            <div class="week-work col-md-10" id="pre-work-list">
+            <div class="col-md-1">
+            </div>
+            <div class="week-work col-md-9" id="pre-work-list">
               <p><a href="#">Getting Started at Epicodus</a></p>
               <p><a href="#">Getting Started With Intro to Programming</a></p>
             </div>
@@ -40,7 +42,9 @@
             <div class="week-title col-md-2">
               <h5>Week 1</h5>
             </div>
-            <div class="week-work col-md-10">
+            <div class="col-md-1">
+            </div>
+            <div class="week-work col-md-9">
               <a href="courses.html">Git, HTML and CSS</a>
             </div>
             <div class="test">
@@ -51,7 +55,9 @@
             <div class="week-title col-md-2">
               <h5>Week 2</h5>
             </div>
-            <div class="week-work col-md-10">
+            <div class="col-md-1">
+            </div>
+            <div class="week-work col-md-9">
               <a href="#">JavaScript and jQuery</a>
             </div>
             <div class="test">
@@ -62,7 +68,9 @@
             <div class="week-title col-md-2">
               <h5>Week 3</h5>
             </div>
-            <div class="week-work col-md-10">
+            <div class="col-md-1">
+            </div>
+            <div class="week-work col-md-9">
               <a href="#">Arrays & Looping</a>
             </div>
             <div class="test">
@@ -73,7 +81,9 @@
             <div class="week-title col-md-2">
               <h5>Week 4</h5>
             </div>
-            <div class="week-work col-md-10">
+            <div class="col-md-1">
+            </div>
+            <div class="week-work col-md-9">
               <a href="#">Object-Oriented JavaScript</a>
             </div>
             <div class="test">
@@ -84,7 +94,9 @@
             <div class="week-title col-md-2">
               <h5>Week 5</h5>
             </div>
-            <div class="week-work col-md-10">
+            <div class="col-md-1">
+            </div>
+            <div class="week-work col-md-9">
               <a href="#">Team Week</a>
             </div>
             <div class="test">
